<resources>
    <string name="app_name">VCA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="ScanNearby">Scan for nearby OneSheeld devices using Bluetooth. (Make sure Bluetooth is enabled.)</string>
    <string name="scanForOnesheeld">Scan for OneSheeld</string>
    <string name="lights">Lights</string>
    <string name="heating">Heating</string>
    <string name="disconnect">Disconnect</string>
    <string name="vca">Virtual Care Assistant</string>
    <string name="open_weather_maps_app_id">843e4efe31788adba107f24909712912</string>
    <string name="order">Order</string>
    <string name="take_out">Take-Out</string>
    <string name="shopping">Shopping</string>
    <string name="taxi">Taxi</string>
    <string name="home">Home</string>
    <string name="weather">Weather</string>
    <string name="game">Game</string>
    <string name="gps">GPS</string>
    <string name="humid">Humidity: </string>
    <string name="sorry_cannot_display_weather">Sorry! Cannot display weather.</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="refresh">Refresh</string>
    <string name="speech_prompt">Speak now</string>
    <string name="speech_not_supported">This device does not support speach recognition.</string>
    <string name="dinos">Dinos</string>
    <string name="call">Call</string>
    <string name="click_below_to_refresh">Click Below to Refresh</string>
    <string name="dominos">Dominos</string>
    <string name="ring">Ring:</string>
    <string name="go_to_website">Go to Website</string>
    <string name="tesco">Tesco</string>
    <string name="satellite_taxis">Satellite Taxis</string>
    <string name="call_permission_ungranted">You did not give permissions to make calls</string>
    <string name="turn_on_bt">Turn on bluetooth to connect.</string>
    <string name="bt_support">Bluetooth is not supported on this device.</string>
    <string name="acquiringWeather">Acquiring weather</string>
    <string name="connectingOneSheeld">Connecting to OneSheeld</string>
    <string name="turningOnLights">Turning on lights</string>
    <string name="turningOffLights">Turning off lights</string>
    <string name="noConnectionLights">Lights require connection to OneSheeld</string>
    <string name="turningOnHeating">Turning on heating</string>
    <string name="turningOffHeating">Turning off heating</string>
    <string name="noConnectionHeating">Heating requires connection to OneSheeld</string>
    <string name="unknownVoiceCommand">Command not recognised</string>
    <string name="call_per">Permissions Required to make call.</string>
    <string name="loc_req_blue">Location required to connect with bluetooth.</string>
    <string name="enter_your_username">Please enter your Username:</string>
    <string name="username">Username</string>
    <string name="enter_your_password">Please enter your Password:</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="your_username_password_is_incorrect">Your username/password is incorrect</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="fields">Fields cannot be empty</string>
    <string name="your_location_is_lat">Your location is: Lat:</string>
    <string name="comma_lon">, Lon:</string>
    <string name="show_current_location">Show current location</string>
    
  <!-- Strings related to game -->
    <string name="enter_word">Enter Word</string>
    <string name="next_level">Next Level</string>
    <string name="start_game">Start Game</string>
    <string name="restart_level">Restart Level</string>
    <string name="incorrect_word">Incorrect Word</string>
    <string name="game_beat">You beat the game!</string>
    <string name="music">Music</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="enter_url_here">Enter URL here</string>

    <!--Twitter API keys-->
    <string name="com.twitter.sdk.android.CONSUMER_KEY">1BZPib2EMP9yqOZeMRniU7LdN</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">djrVmIpaWwL7Uio0qhqMuQh40umhgiuiBDtdc6QqtrpnfIRJDb</string>
    <string name="tap_button_to_record_voice">Tap Button to Record Voice</string>
    <string name="tweet_geofence">Tweet GeoFence</string>

    <string name="add_event">Add Event</string>
    <string name="add_title">Add Title</string>
    <string name="add_location">Add Location</string>
    <string name="choose_start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="calendar">Calendar</string>
    <string name="you_are_beyond_the_safe_distance_from_your_home">You are beyond the safe distance from your home</string>
    <string name="memorise_words">Memorise the words below:</string>
    <string name="level_beat">You beat the level!</string>
    <string name="enter_memorised_words">Enter the words you memorised.</string>

    <string-array name="music">
        <item>Song 1</item><item>Song 2</item><item>Song 3</item>
        <item>Song 4</item><item>Song 5</item><item>Song 6</item>
        <item>Song 7</item><item>Song 8</item><item>Song 9</item>
        <item>Song 10</item><item>Song 11</item><item>Song 12</item>
    </string-array>
    <string-array name="musicUrl">
        <item>https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3</item>
        <item>https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3</item>
        <item>https://www.soundhelix.com/examples/mp3/SoundHelix-Song-3.mp3</item>
        <item>https://www.soundhelix.com/examples/mp3/SoundHelix-Song-4.mp3</item>
        <item>https://www.soundhelix.com/examples/mp3/SoundHelix-Song-5.mp3</item>
        <item>https://www.soundhelix.com/examples/mp3/SoundHelix-Song-6.mp3</item>
        <item>https://www.soundhelix.com/examples/mp3/SoundHelix-Song-7.mp3</item>
        <item>https://www.soundhelix.com/examples/mp3/SoundHelix-Song-8.mp3</item>
        <item>https://www.soundhelix.com/examples/mp3/SoundHelix-Song-9.mp3</item>
        <item>https://www.soundhelix.com/examples/mp3/SoundHelix-Song-10.mp3</item>
        <item>https://www.soundhelix.com/examples/mp3/SoundHelix-Song-11.mp3</item>
        <item>https://www.soundhelix.com/examples/mp3/SoundHelix-Song-12.mp3</item>
    </string-array>

    <string-array name="hour">
        <item>1</item><item>2</item><item>3</item>
        <item>4</item><item>5</item><item>6</item>
        <item>7</item><item>8</item><item>9</item>
        <item>10</item><item>11</item><item>12</item>
        <item>13</item><item>14</item><item>15</item>
        <item>16</item><item>17</item><item>18</item>
        <item>19</item><item>20</item><item>21</item>
        <item>22</item><item>23</item><item>24</item>
    </string-array>

    <string-array name="mins">
        <item>1</item><item>2</item><item>3</item>
        <item>4</item><item>5</item><item>6</item>
        <item>7</item><item>8</item><item>9</item>
        <item>10</item><item>11</item><item>12</item>
        <item>13</item><item>14</item><item>15</item>
        <item>16</item><item>17</item><item>18</item>
        <item>19</item><item>20</item><item>21</item>
        <item>22</item><item>23</item><item>24</item>
        <item>25</item><item>26</item><item>27</item>
        <item>28</item><item>29</item><item>30</item>
        <item>31</item><item>32</item><item>33</item>
        <item>34</item><item>35</item><item>36</item>
        <item>37</item><item>38</item><item>39</item>
        <item>40</item><item>41</item><item>42</item>
        <item>43</item><item>44</item><item>45</item>
        <item>46</item><item>47</item><item>48</item>
        <item>49</item><item>50</item><item>51</item>
        <item>52</item><item>53</item><item>54</item>
        <item>55</item><item>56</item><item>57</item>
        <item>58</item><item>59</item><item>60</item>
    </string-array>
</resources>
