<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_menu_weather"
            android:title="@string/weather" />
        <item
            android:id="@+id/nav_gps"
            android:icon="@drawable/ic_menu_gps"
            android:title="@string/gps" />
        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/ic_menu_game"
            android:title="@string/game" />
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_menu_music"
            android:title="@string/music" />
    </group>

    <item android:title="@string/order">
        <menu>
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_to"
                android:icon="@drawable/ic_menu_takeout"
                android:title="@string/take_out" />
            <item
                android:id="@+id/nav_shop"
                android:icon="@drawable/ic_menu_shop"
                android:title="@string/shopping" />
            <item
                android:id="@+id/nav_taxi"
                android:icon="@drawable/ic_menu_taxi"
                android:title="@string/taxi" />
        </group>
        </menu>
    </item>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/sign_out"
                android:title="@string/sign_out"
                android:icon="@drawable/signout"/>
        </menu>
    </item>

</menu>
