<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingTop="50dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:text="@string/enter_your_username"
        android:textColor="@color/blu"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_in"
        android:hint="@string/username"/>

    <TextView
        android:paddingTop="20dp"
        android:layout_width="wrap_content"
        android:id="@+id/user_pw"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_password"
        android:textColor="@color/blu"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/pw_in"
        android:hint="@string/password"/>

    <TextView
        android:id="@+id/login_error_message"
        android:paddingTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/your_username_password_is_incorrect"
        android:textColor="@color/text_red_error"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login"/>

</LinearLayout>