<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/business_layout_header"
            android:text="@string/music"
            android:gravity="center"
            android:textColor="@color/blu"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/extra_medium"
            android:paddingBottom="50dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/music_link"
            android:hint="@string/enter_url_here"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/play_music"
                android:layout_gravity="center"
                android:text="@string/play"/>

</LinearLayout>